contrast fix

--- a/lawfirm/scss/_small.scss
+++ b/lawfirm/scss/_small.scss
@@ -23,8 +23,8 @@ header {
     padding: .5rem 2%;
     
 }
-header h1 {margin: 0; color: #f8daba;}
-header h2 {margin: 0; font-weight: normal; color: #f8daba;}
+header h1 {margin: 0; color: #FFD5A3;}
+header h2 {margin: 0; font-weight: normal; color: #FFD5A3;}
 input.search {float: right; margin: .5rem 0 0 0;}
 /*----------- NAVIGATION --------------*/
 /*div#navWrapper {
@@ -50,7 +50,7 @@ nav ul {
 nav ul li a {
     display: block;
     background-color: #A15E15;
-    color: #f8daba;
+    color: #FFD5A3;
     padding: .5rem;
     text-decoration: none;
     font-size: 1.2rem;
@@ -88,7 +88,7 @@ main {
     button {
         display: block;
         background-color: #522A00;
-        color: #f8daba;
+        color: #FFD5A3;
         padding: .5rem;
         margin-bottom: .5rem;
         text-decoration: none;
@@ -108,9 +108,9 @@ main {
     div.card1 {
         margin: 1rem 0;
         border: 1px solid #522A00;
-        background-color: #f8daba;
+        background-color: #FFD5A3;
         section {
-            background-color: #f8daba;
+            background-color: #FFD5A3;
             border-bottom: 2px solid #522A00;
             color: #111;
             padding: 1rem 0;
@@ -132,12 +132,12 @@ main {
             margin-top: .5rem;
             margin-bottom: .5rem;
             padding-bottom: .5rem;
-            background-color: lighten($color: #f8daba, $amount: 5%) ;
+            background-color: lighten($color: #FFD5A3, $amount: 5%) ;
     }
 
     .blog {
         margin-top: .5rem;
-        background-color: #f8daba;
+        background-color: #FFD5A3;
         
         h2{
             margin-top: 0;
