--- a/lawfirm/scss/styles.css
+++ b/lawfirm/scss/styles.css
@@ -329,12 +329,12 @@ header {
 
 header h1 {
   margin: 0;
-  color: #f8daba; }
+  color: #FFD5A3; }
 
 header h2 {
   margin: 0;
   font-weight: normal;
-  color: #f8daba; }
+  color: #FFD5A3; }
 
 input.search {
   float: right;
@@ -359,7 +359,7 @@ nav ul {
 nav ul li a {
   display: block;
   background-color: #A15E15;
-  color: #f8daba;
+  color: #FFD5A3;
   padding: .5rem;
   text-decoration: none;
   font-size: 1.2rem; }
@@ -413,7 +413,7 @@ main {
   main button {
     display: block;
     background-color: #522A00;
-    color: #f8daba;
+    color: #FFD5A3;
     padding: .5rem;
     margin-bottom: .5rem;
     text-decoration: none;
@@ -429,9 +429,9 @@ main {
   main div.card1 {
     margin: 1rem 0;
     border: 1px solid #522A00;
-    background-color: #f8daba; }
+    background-color: #FFD5A3; }
     main div.card1 section {
-      background-color: #f8daba;
+      background-color: #FFD5A3;
       border-bottom: 2px solid #522A00;
       color: #111;
       padding: 1rem 0;
@@ -445,10 +445,10 @@ main {
     margin-top: .5rem;
     margin-bottom: .5rem;
     padding-bottom: .5rem;
-    background-color: #fae6d1; }
+    background-color: #ffe1bd; }
   main .blog {
     margin-top: .5rem;
-    background-color: #f8daba; }
+    background-color: #FFD5A3; }
     main .blog h2 {
       margin-top: 0; }
     main .blog button {
